# label_printer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
label_printer/: hooks.py  label_print.py  modules.txt
label_printer/label_printer/doctype/label_printer_settings/: __init__.py  label_printer_settings.json  label_printer_settings.py
label_printer/public/js/: delivery_note.js  label_printer_settings.js
print_agent/: app.py  setup.sh
